fixed alignment of counter

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -161,7 +161,7 @@ footer {
     display: inline-block;
     text-align: center;
     top: 180px;
-    left: 120px;
+    left: 125px;
     margin: 0;
     font-size: 250px;
     z-index: 2;
@@ -175,7 +175,7 @@ footer {
     justify-content: center;
     text-align: center;
     top: 180px;
-    margin-left: 15px;
+    margin-left: 10px;
     font-size: 220px;
     z-index: 2;
     text-shadow: 2px 2px 14px $black-color;
